# voxelle

./: .gitignore  AGENTS.md  Cargo.toml  package-lock.json  package.json
.agents/skills/ontological-coding/: SKILL.md
.github/workflows/: release.yml
.isnad/: ledger.jsonl
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  web_update.rs
apps/web/: README.md  package.json  playwright.config.ts
apps/web/src/: App.tsx  app.css  index.css
apps/web/src/components/: ConnectionPanel.tsx  Topbar.tsx  WebUpdateBadge.tsx
apps/web/src/routes/: Home.tsx  Room.tsx  Space.tsx
apps/web/src/voxelle/: accept.ts  dag.ts  events.ts  governance.ts  idb.ts  invite_link.ts  limits.ts  secrets.ts  signal_ws.ts  store.ts  sync.ts  tauri.ts  types.ts  webrtc.ts
apps/web/src/voxelle/rfc/: base64.ts  bytes.ts  delegation.ts  hash.ts  ids.ts  invite.ts  invite_bootstrap.ts  jcs.ts  netstring.ts  signing.ts  space_genesis.ts  spki.ts  spki_parse.ts  types.ts  util_b64.ts  validate.ts
apps/web/tests/e2e/: p2p_chat.spec.ts  webrtc_loopback.spec.ts
crates/isnad/: Cargo.toml
crates/isnad/src/: lib.rs
crates/voxelle-app/: Cargo.toml
crates/voxelle-app/src/: lib.rs
crates/voxelle-board/: Cargo.toml
crates/voxelle-board/src/: main.rs  ui.html
crates/voxelle-cli/: Cargo.toml
crates/voxelle-cli/src/: main.rs
crates/voxelle-cli/tests/: cli_smoke.rs
crates/voxelle-core/: Cargo.toml
crates/voxelle-core/src/: lib.rs
crates/voxelle-desktop/: Cargo.toml
crates/voxelle-desktop/src/: main.rs
crates/voxelle-net/: Cargo.toml
crates/voxelle-net/src/: lib.rs
crates/voxelle-protocol/: Cargo.toml
crates/voxelle-protocol/src/: ids.rs  jcs.rs  lib.rs  netstring.rs  spki_ed25519.rs
crates/voxelle-protocol/tests/: protocol_smoke.rs
crates/voxelle-shell/: Cargo.toml
crates/voxelle-shell/src/: lib.rs
crates/voxelle-signal/: Cargo.toml
crates/voxelle-signal/src/: main.rs
crates/voxelle-store/: Cargo.toml
crates/voxelle-store/src/: lib.rs
crates/voxelle-sync/: Cargo.toml
crates/voxelle-sync/src/: lib.rs
crates/voxelle-tauri/: Cargo.toml
crates/voxelle-tauri-host/: Cargo.toml  tauri.conf.json
crates/voxelle-tauri-host/src/: main.rs
crates/voxelle-tauri/src/: lib.rs
docs/: FIELD_TEST.md  IPV6_NATIVE_P2P_SPEC.md  IPV6_ROADMAP.md  IPV6_SALVAGE_NOTES.md  P2P_INVITE_SPACE_CHAT_RFC.md  RELEASES.md  UI_ONTOLOGY.md
scripts/: field-test.sh
skills/: work-board.skill
skills/work-board/: SKILL.md
skills/work-board/agents/: openai.yaml
skills/work-board/references/: bootstrap.md  schemas.md  spec.md
web/: index.html  tsconfig.json
web/src/: fixture.js  main.js  shell-client.js  shell-contract.ts  styles.css
