[package]
name = "voxelle-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
voxelle-core = { path = "../voxelle-core" }
voxelle-net = { path = "../voxelle-net" }
voxelle-store = { path = "../voxelle-store" }
voxelle-sync = { path = "../voxelle-sync" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
