[package]
name = "voxelle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxelle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
voxelle-core = { path = "../voxelle-core" }
voxelle-net = { path = "../voxelle-net" }
voxelle-store = { path = "../voxelle-store" }
voxelle-sync = { path = "../voxelle-sync" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
