[package]
name = "voxelle-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
spki = "0.7"
