[package]
name = "voxelle-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
ts-rs = "12"
voxelle-app = { path = "../voxelle-app" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
